Enum RoleEnum {
  uploader
  verifier
  downloader
  printer
  admin
}

Enum VerificationStatus {
  approved
  rejected
}

Enum PrintStatus {
  queued
  printing
  completed
  failed
}

Table users {
  id UUID [pk, default: `uuid_generate_v4()`]
  username varchar(255) [unique, not null]
}

Table user_roles {
  user_id UUID [pk, ref: > users.id]
  role_id RoleEnum [pk]
}

Table model_files {
  id UUID [pk, default: `uuid_generate_v4()`]
  minio_path varchar(255) [not null]
  filename varchar(255) [not null]
  size bigint [not null]
  uploader_id UUID [not null, ref: > users.id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table model_verifications {
  id int [pk, increment]
  model_file_id UUID [not null, ref: > model_files.id]
  verifier_id UUID [not null, ref: > users.id]
  status VerificationStatus [not null]
  comments text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table print_jobs {
  id UUID [pk, default: `uuid_generate_v4()`]
  model_file_id UUID [not null, ref: > model_files.id]
  requested_by UUID [not null, ref: > users.id]
  status PrintStatus [not null]
  started_at timestamp
  completed_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}
